--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-color: #f0f0f0;
         }
         header {
-            background-image: linear-gradient(to bottom, #f7f7f7, #38b0e7);
+            background-image: linear-gradient(to bottom, #218dbe, #38b0e7);
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -37,10 +37,10 @@
 </head>
 <body>
     <header>
-        <h1>aaaaa</h1>
+        <h1> TecnoCampo - A Tecnologia No Campo </h1>
     </header>
     
-    <section>
+    <section class="centralizado">
         <h2>Bem-vindo ao meu site!</h2>
         <p>Esta é uma página HTML básica.</p>
     </section>
