--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <h2>Bem-vindo ao meu site!</h2>
         <p>Esta é uma página HTML básica.</p>
     </section>
-    
+        <p></p>
+        é tal.<br>
     <footer>
         <p>&copy; 2024 Projeto Agrinho.com. Todos os direitos reservados.</p>
     </footer>
