--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-color: #f0f0f0;
         }
         header {
-            background-image: linear-gradient(to bottom, #218dbe, #38b0e7);
+            background-image: linear-gradient(to bottom, #9bcff1, #4f91e7);
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -42,7 +42,8 @@
     
     <section class="centralizado">
         <h2>Bem-vindo ao meu site!</h2>
-        <p>Esta é uma página HTML básica.</p>
+        <br>
+        <p>João da Terra</p>
     </section>
         <p></p>
        
@@ -58,6 +59,11 @@ Em um pequeno vilarejo no interior do Brasil, um agricultor chamado João da Ter
 A vida no campo era árdua e imprevisível. A produção dependia completamente do clima e da força física dos trabalhadores.<br> Enfrentar estiagens prolongadas e pragas que dizimavam as colheitas eram desafios constantes. João via seus familiares lutarem bravamente para manter a produção e sustentar a família, mas muitas vezes, o esforço não era recompensado como esperado.<br> As dificuldades financeiras eram uma constante, e o sonho de um futuro melhor parecia sempre distante.<br>
 
 <br>
+<br>
+<h1>minha imagem</h1>
+<img src="colher_arroz_na_full.jpg" width="500" height="600">
+<br>
+<br>
 Ao completar 20 anos, João herdou a fazenda da família após o falecimento de seu pai. Determinado a continuar o legado, ele decidiu que precisava encontrar novas formas de aumentar a produtividade e garantir a subsistência da fazenda.<br> Foi então que ouviu falar de novas tecnologias agrícolas que estavam revolucionando o setor. No começo, João foi cético. Afinal, ele sempre acreditou que a sabedoria dos antepassados era suficiente para prosperar.<br>
 
 No entanto, a curiosidade o levou a participar de uma feira agrícola na cidade vizinha, onde conheceu o engenheiro agrônomo Lucas, que lhe apresentou as maravilhas da agricultura moderna.<br> Lucas mostrou a João as vantagens dos sistemas de irrigação automatizados, tratores modernos, drones para monitoramento de plantações e sensores de solo.<br> João ficou impressionado, mas ao mesmo tempo apreensivo. Ele não tinha conhecimento técnico e temia que o custo das novas tecnologias fosse proibitivo.<br>
@@ -65,11 +71,21 @@ No entanto, a curiosidade o levou a participar de uma feira agrícola na cidade 
 Decidido a não deixar a oportunidade escapar, João se inscreveu em cursos oferecidos por cooperativas agrícolas e programas governamentais de apoio ao agricultor.<br> Aos poucos, ele começou a entender como as novas tecnologias poderiam transformar a vida no campo. Com a ajuda de um financiamento rural, João adquiriu um sistema de irrigação por gotejamento, o que reduziu significativamente o desperdício de água e garantiu uma colheita mais estável mesmo durante os períodos de seca.<br>
 
 <br>
+<br>
+<h1>minha imagem</h1>
+<img src="colher_arroz_na_full.jpg" width="500" height="600">
+<br>
+<br>
 Logo após, João investiu em um trator moderno de última geração com GPS, que aumentou a eficiência do preparo do solo e do plantio.<br> Ele também adotou o uso de drones para monitorar as plantações, detectando pragas e doenças antes que se espalhassem.<br> Os sensores de solo ajudavam a determinar a quantidade exata de fertilizantes necessários, evitando o desperdício e melhorando a qualidade do solo.<br>
 
 Com o passar dos anos, a produtividade da fazenda de João cresceu exponencialmente. Ele não apenas conseguiu superar as dificuldades financeiras, mas também expandiu suas operações, cultivando novas culturas e criando empregos para outros moradores do vilarejo.<br> A vida de João mudou completamente. Ele agora tinha mais tempo para se dedicar à família e à comunidade, participando de eventos e ajudando outros agricultores a se adaptarem às novas tecnologias.<br>
 
 A história de João da Terra se tornou um exemplo de como a combinação da tradição com a inovação pode transformar vidas.<br> Ele nunca esqueceu suas raízes, mas soube enxergar além dos métodos tradicionais, abraçando o futuro e mostrando que a tecnologia, quando bem utilizada, pode ser uma poderosa aliada no campo.<br>
+<br>
+<br>
+<h1>minha imagem</h1>
+<img src="colher_arroz_na_full.jpg" width="500" height="600">
+<br>
 <br>
 
 </div>
