--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         
+       
+
+        p {
+            font-size: 19px;
+        }
+
+        body {
+            font-size: 28px; /* Ajuste o tamanho conforme necessário */
+        }
+
         /* css leitura apartir daqui (lembrar) */
         body {
             font-family: Arial, sans-serif;
@@ -52,6 +62,7 @@
     </footer>
 </body>
 
+
 <div class="centralizado">
 
 Em um pequeno vilarejo no interior do Brasil, um agricultor chamado João da Terra.<br> Nascido e criado em uma família de agricultores, João sempre acreditou que o trabalho duro e a conexão com a terra eram os pilares da vida no campo.<br> Durante a infância, ele observava seu pai e avô lavrando a terra com arados puxados por bois e plantando sementes manualmente, seguindo os ensinamentos passados de geração em geração.<br>
@@ -60,7 +71,7 @@ A vida no campo era árdua e imprevisível. A produção dependia completamente 
 
 <br>
 <br>
-<h1>minha imagem</h1>
+<h1></h1>
 <img src="colher_arroz_na_full.jpg" width="500" height="600">
 <br>
 <br>
@@ -72,19 +83,26 @@ Decidido a não deixar a oportunidade escapar, João se inscreveu em cursos ofer
 
 <br>
 <br>
-<h1>minha imagem</h1>
-<img src="colher_arroz_na_full.jpg" width="500" height="600">
+<h1></h1>
+<img src="cenario campo.jpeg" width="500" height="600">
 <br>
 <br>
 Logo após, João investiu em um trator moderno de última geração com GPS, que aumentou a eficiência do preparo do solo e do plantio.<br> Ele também adotou o uso de drones para monitorar as plantações, detectando pragas e doenças antes que se espalhassem.<br> Os sensores de solo ajudavam a determinar a quantidade exata de fertilizantes necessários, evitando o desperdício e melhorando a qualidade do solo.<br>
 
-Com o passar dos anos, a produtividade da fazenda de João cresceu exponencialmente. Ele não apenas conseguiu superar as dificuldades financeiras, mas também expandiu suas operações, cultivando novas culturas e criando empregos para outros moradores do vilarejo.<br> A vida de João mudou completamente. Ele agora tinha mais tempo para se dedicar à família e à comunidade, participando de eventos e ajudando outros agricultores a se adaptarem às novas tecnologias.<br>
+Com o passar dos anos, a produtividade da fazenda de João cresceu exponencialmente. Ele não apenas conseguiu superar as dificuldades financeiras, mas também expandiu suas operações, cultivando novas culturas e criando empregos para outros moradores do vilarejo.<br>
+<br>
+<br>
+<h1></h1>
+<img src="5g-campo (4).jpg" width="500" height="600">
+<br>
+<br>
+<br> A vida de João mudou completamente. Ele agora tinha mais tempo para se dedicar à família e à comunidade, participando de eventos e ajudando outros agricultores a se adaptarem às novas tecnologias.<br>
 
 A história de João da Terra se tornou um exemplo de como a combinação da tradição com a inovação pode transformar vidas.<br> Ele nunca esqueceu suas raízes, mas soube enxergar além dos métodos tradicionais, abraçando o futuro e mostrando que a tecnologia, quando bem utilizada, pode ser uma poderosa aliada no campo.<br>
 <br>
 <br>
-<h1>minha imagem</h1>
-<img src="colher_arroz_na_full.jpg" width="500" height="600">
+<h1></h1>
+<img src="drone-campo.jpg" width="500" height="600">
 <br>
 <br>
 
