--- a/Index.html
+++ b/Index.html
@@ -15,19 +15,19 @@
             height: 50px;
             text-align: center;
             line-height: 50px;
-            border: 1px solid #ccc;
+            border: 1px solid #40af4f;
             font-size: 20px;
-            background-color: white;
+            background-color: rgb(74, 184, 89);
         }
         .player {
-            background-color: yellow;
+            background-color: rgb(255, 255, 255);
         }
         .start {
-            background-color: red;
+            background-color: rgb(0, 143, 48);
             color: white;
         }
         .end {
-            background-color: green;
+            background-color: rgb(0, 143, 48);
             color: white;
         }
     </style>
